--- a/app/views/static_pages/_geospatial_dashboard_js.html.erb
+++ b/app/views/static_pages/_geospatial_dashboard_js.html.erb
@@ -622,14 +622,60 @@ function drawProject(microProjectData, r){
     }
     $('#projectPage').append("<hr>")
     $('#projectPage').append("<b>Comment</b>")
-    $('#projectPage').append("<form accept-charset='UTF-8' action='/queries/post_comment' data-remote='true' id='post_comment' method='post'><div style='margin:0;padding:0;display:inline'><input name='utf8' type='hidden' value='✓'><input name='verboselat' type='hidden'><input name='verboselng' type='hidden'><input name='geocode' type='hidden'></div><input class='post_comment' name='name' placeholder='*Name' type='text' style='float:left;width:50%'><input class='post_comment' name='email' placeholder='*Email' type='text' style='float:left;width:50%'><input class='post_comment' name='latlng' placeholder='Lat, Long' type='text' style='float:left;width:66%;'><button type='button' onclick='getLatLon()' style='float:left;width:33%;padding:0px !important;line-height:1 !important;position:relative;top:2px;'>Get from map</button><textarea class='post_comment' name='content' placeholder='*Type your comment here...' style='float:left;width:100%;'></textarea><input class='post_comment' style='float:left;width:6%;' type='checkbox' required='true' id='terms_and_conditions'><label style='float:left;width:60%;'>I accept the <a href='http://aiddata.org/disclaimer-and-license' target='_blank'>terms and conditions</a>.</label><button type='button' style='float:right;width:33%;' onclick='submitComment()'>Submit</button></form>")
-    //$('#projectPage').append(< #render 'projects/comment_form' >)
+    $('#projectPage').append("<form onchange='validate(this)' accept-charset='UTF-8' action='/queries/post_comment' data-remote='true' id='post_comment' method='post'><div style='margin:0;padding:0;display:inline'><input name='utf8' type='hidden' value='✓'><input name='verboselat' type='hidden'><input name='verboselng' type='hidden'><input name='geocode' type='hidden'></div><input class='post_comment' name='name' required='true' placeholder='*Name' type='text' style='float:left;width:50%'><input class='post_comment' name='email' required='true' placeholder='*Email' type='text' style='float:left;width:50%'><input class='post_comment' name='latlng' onchange='mapLatLon()' placeholder='Lat, Long' type='text' style='float:left;width:66%;'><button type='button' onclick='getLatLon()' style='float:left;width:33%;padding:0px !important;line-height:1 !important;position:relative;top:2px;'>Get from map</button><textarea class='post_comment' name='content' required='true' placeholder='*Type your comment here...' style='float:left;width:100%;'></textarea><input class='post_comment' style='float:left;width:6%;' type='checkbox' required='true' id='terms_and_conditions'><label style='float:left;width:60%;'>I accept the <a href='http://aiddata.org/disclaimer-and-license' target='_blank'>terms and conditions</a>.</label><button type='button' id='submit' disabled='disabled' style='float:right;width:33%;' onclick='submitComment()'>Submit</button></form>")
 //Slide Results Panel
     slideResults()
     r.resolve();
     return r;
 };
+function validate(e){
+    var requiredInputs = $(e).find('[required=true]'),
+            len = requiredInputs.length,
+            $button = $(e).find('button#submit'),
+            val = true;
+    for(var i = 0;i<len;i++){
+        var $input = $(requiredInputs[i])
+        if($input.attr('type')=='checkbox'){
+            val = val && $input.prop('checked')
+        }else{
+            val = val && $input.val().length>0
+        }
+    }
+    if(val){
+        $button.removeAttr("disabled")
+    }else{
+        $button.attr("disabled","disabled")
+    }
+}
 newComment = L.geoJson();
+function mapLatLon(){
+    var latlng = $("form#post_comment input[name = 'latlng']").val().split(',');
+    if(latlng.length==2){
+        var lat=parseFloat(latlng[0]),
+                lng = parseFloat(latlng[1]);
+        if(typeof(lat)=="number" && typeof(lng)=="number" && lat>=-90 && lat<=90 && lng>=0 && lng<=180) {
+            $("input[name = 'verboselat']").val(lat)
+            $("input[name = 'verboselng']").val(lng)
+            $("input[name = 'geocode']").val(undefined)
+            if (map.hasLayer(newComment)) {
+                map.removeLayer(newComment)
+            }
+            newComment = L.marker([lat, lng]).bindPopup(lat.toFixed(4) + ", " + lng.toFixed(4))
+            map.panTo([lat,lng])
+            newComment.addTo(map)
+        }
+    } else {
+        if (map.hasLayer(newComment)) {
+            map.removeLayer(newComment)
+        }
+        if(Object.keys(markers._featureGroup._layers).length>0){
+            var bounds = markers.getBounds()
+            zoomToFeature(bounds)
+        }else{
+            map.fitBounds([[52,68],[-42,-29]])
+        }
+    }
+}
 function getLatLon(){
     map.once('click',function(e){
         var lat = e.latlng.lat,
@@ -848,7 +894,7 @@ function openRightClickMap(e){
     $('div.rightClick#suggest').mousedown(function(){
         map.removeLayer(dropdown);
         newSuggestion = L.circleMarker(e.latlng,suggestionOptions);
-        newSuggestion.bindPopup("<form style='width:200px;height:150px;' accept-charset='UTF-8' action='/queries/post_suggestion' data-remote='true' id='post_suggestion' method='post'><div style='margin:0;padding:0;display:inline'><input name='utf8' type='hidden' value='✓'><input name='verboselat' type='hidden' value='"+ e.latlng.lat+"'><input name='verboselng' type='hidden' value='"+ e.latlng.lng+"'></div><input class='post_suggestion' name='name' placeholder='*Name' type='text' style='float:left;width:50%'><input class='post_suggestion' name='email' placeholder='*Email' type='text' style='float:left;width:50%'><input class='post_suggestion' name='source' placeholder='Source' type='text' style='float:left;width:100%;'><input type='text' class='post_suggestion' name='title' placeholder='*Suggest a project title' style='float:left;width:100%;'><input class='post_suggestion' style='float:left;width:10%;' type='checkbox' required='true' id='terms_and_conditions'><label style='float:left;width:90%;'>I accept the <a href='http://aiddata.org/disclaimer-and-license' target='_blank'>terms and conditions</a>.</label><button type='button' style='width:50%;float:left;' onclick='submitSuggestion()'>Submit</button><button type='button' style='width:50%;float:left;' onclick='cancelSuggestion()'>Cancel</button></form>")
+        newSuggestion.bindPopup("<form onchange='validate(this)' style='width:200px;height:150px;' accept-charset='UTF-8' action='/queries/post_suggestion' data-remote='true' id='post_suggestion' method='post'><div style='margin:0;padding:0;display:inline'><input name='utf8' type='hidden' value='✓'><input name='verboselat' type='hidden' value='"+ e.latlng.lat+"'><input name='verboselng' type='hidden' value='"+ e.latlng.lng+"'></div><input class='post_suggestion' name='name' required='true' placeholder='*Name' type='text' style='float:left;width:50%'><input class='post_suggestion' name='email' placeholder='*Email' required='true' type='text' style='float:left;width:50%'><input class='post_suggestion' name='source' required='true' placeholder='*Source' type='text' style='float:left;width:100%;'><input type='text' class='post_suggestion' name='title' required='true' placeholder='*Suggest a project title' style='float:left;width:100%;'><input class='post_suggestion' style='float:left;width:10%;' type='checkbox' required='true' id='terms_and_conditions'><label style='float:left;width:90%;'>I accept the <a href='http://aiddata.org/disclaimer-and-license' target='_blank'>terms and conditions</a>.</label><button type='button' style='width:50%;float:left;' id='submit' disabled='disabled' onclick='submitSuggestion()'>Submit</button><button type='button' style='width:50%;float:left;' onclick='cancelSuggestion()'>Cancel</button></form>")
         newSuggestion.addTo(map)
         newSuggestion.once('popupclose',cancelSuggestion)
         newSuggestion.openPopup()
@@ -893,10 +939,10 @@ function openRightClickMarkers(e){
                 function(){
                     var lat = e.layer._latlng.lat,
                             lng = e.layer._latlng.lng;
-                    $("input[name = 'verboselat']").val(lat)
-                    $("input[name = 'verboselng']").val(lng)
-                    $("input[name = 'latlng']").val(lat.toFixed(4)+", "+lng.toFixed(4))
-                    $("input[name = 'geocode']").val(e.layer.properties.geo_code_id)
+                    $("form#post_comment input[name = 'verboselat']").val(lat)
+                    $("form#post_comment input[name = 'verboselng']").val(lng)
+                    $("form#post_comment input[name = 'latlng']").val(lat.toFixed(4)+", "+lng.toFixed(4))
+                    $("form#post_comment input[name = 'geocode']").val(e.layer.properties.geo_code_id)
                     if(map.hasLayer(newComment)){
                         map.removeLayer(newComment)
                     }
@@ -912,10 +958,10 @@ function openRightClickMarkers(e){
         map.removeLayer(dropdown);
         var lat = e.layer._latlng.lat,
                 lng = e.layer._latlng.lng;
-        $("input[name = 'verboselat']").val(lat)
-        $("input[name = 'verboselng']").val(lng)
-        $("input[name = 'latlng']").val(lat.toFixed(4)+", "+lng.toFixed(4))
-        $("input[name = 'geocode']").val(e.layer.properties.geo_code_id)
+        $("form#post_comment input[name = 'verboselat']").val(lat)
+        $("form#post_comment input[name = 'verboselng']").val(lng)
+        $("form#post_comment input[name = 'latlng']").val(lat.toFixed(4)+", "+lng.toFixed(4))
+        $("form#post_comment input[name = 'geocode']").val(e.layer.properties.geo_code_id)
         if(map.hasLayer(newComment)){
             map.removeLayer(newComment)
         }
@@ -944,33 +990,45 @@ function cancelSuggestion(){
     if(map.hasLayer(newSuggestion)){map.removeLayer(newSuggestion)}
 };
 function submitSuggestion(){
+    $("form#post_suggestion").trigger("submit")
     var title=$("form#post_suggestion input[name ='title']").val(),
             name = $("form#post_suggestion input[name ='name']").val(),
             source = $("form#post_suggestion input[name ='source']").val();
-    if(source.indexOf("http")!=0){source = "http://".concat(source)}
+    if(source.indexOf("http")==0){source = "<a href='"+source+"' target='_blank'>Link</a>"}
+    if(source.indexOf("www")==0){source = "<a href='http://"+source+"' target='_blank'>Link</a>"}
     newSuggestion.closePopup()
-    newSuggestion.bindPopup("<b>"+title+"</b><br><a href='"+source+"' target='_blank'>Source</a><br>Submitted by "+name)
+    newSuggestion.bindPopup("<b>"+title+"</b><br>Source: "+source+"<br>Submitted by "+name)
     suggestions.addLayer(newSuggestion)
     if(map.hasLayer(newSuggestion)){map.removeLayer(newSuggestion)}
     if(map.hasLayer(suggestions)){map.removeLayer(suggestions)}
     suggestions.addTo(map)
     newSuggestion = L.marker()
     $("input#suggestionOverlay").prop('checked',true)
-    window.alert("Thank you for suggesting a project. Your project will appear on your map during your current session, but will not be visible to other users until it is approved by an AidData staff member.")
+    window.alert("Thank you for suggesting a project.\n\nYour project will appear on your map during your current session, but will not be visible to other users until it is approved by an AidData staff member.")
 };
 function submitComment(){
-    var content=$("form#post_comment input[name ='content']").val(),
-            name = $("form#post_comment input[name ='name']").val();
-    newComment.closePopup()
-    newComment.bindPopup(content+"<br>Submitted by "+name)
-    comments.addLayer(newComment)
-    if(map.hasLayer(newComment)){map.removeLayer(newComment)}
-    if(map.hasLayer(comments)){map.removeLayer(comments)}
-    comments.addTo(map)
-    newComment = L.marker()
-    $("input#commentOverlay").prop('checked',true)
+    $("form#post_comment").trigger("submit")
+    var content=$("form#post_comment textarea[name ='content']").val(),
+            name = $("form#post_comment input[name ='name']").val(),
+            latlng = $("form#post_comment input[name ='latlng']").val().split(',');
+    if(map.hasLayer(newComment)) {
+        newComment.closePopup()
+        newComment.bindPopup(content + "<br>-" + name)
+        comments.addLayer(newComment)
+        if (map.hasLayer(newComment)) {
+            map.removeLayer(newComment)
+        }
+        if (map.hasLayer(comments)) {
+            map.removeLayer(comments)
+        }
+        comments.addTo(map)
+        newComment = L.marker()
+        $("input#commentOverlay").prop('checked', true)
+    }
     $("form#post_comment input").val("")
-    window.alert("Thank you for submitting a comment. Your comment will appear on your map during your current session, but will not be visible to other users until it is approved by an AidData staff member.")
+    $("form#post_comment textarea").val("")
+    $("form#post_comment input[type='checkbox']").prop("checked", false)
+    window.alert("Thank you for submitting a comment.\n\nIf you opted to geo-tag your comment, it will appear on your map during your current session, but will not be visible to other users until it is approved by an AidData staff member.")
 };
 map.on('zoomend',setRadiusByZoom)
 //Filter function
