--- a/app/views/static_pages/_geospatial_dashboard_js.html.erb
+++ b/app/views/static_pages/_geospatial_dashboard_js.html.erb
@@ -64,6 +64,8 @@
         transition: transform 0.3s ease-out, opacity 0.3s ease-in;
     }
    input.post_comment, input.post_suggestion{margin-bottom:2px !important;}
+   .crosshair{cursor:crosshair !important;}
+   #post_comment textarea{resize:vertical;}
 </style>
 <div class="loading"></div>
 <div id="vis">
@@ -90,6 +92,7 @@
               slideResults();
               }
               if(map.hasLayer(newComment)){map.removeLayer(newComment)}
+              getLatLonEventsOff();
 //Take AJAX data and draw it, zoom to it
               feature_collection = data.features
 //Clustering
@@ -675,106 +678,73 @@ function mapLatLon(){
             map.fitBounds([[52,68],[-42,-29]])
         }
     }
+};
+function getLatLonEventsOff(){
+    $('#map').removeClass("crosshair")
+    $('.leaflet-clickable').css('cursor','pointer')
+    map.off('click',singleEventFunc)
+    markers.off('click',singleGeocodeEventFunc)
+    markers.off('clusterclick',clusterEventFunc)
+    suggestions.off('click',singleEventFunc)
+    suggestions.off('clusterclick',clusterEventFunc)
+    comments.off('click',singleEventFunc)
+    comments.off('clusterclick',clusterEventFunc)
 }
+singleEventFunc = function(e){
+    var lat = e.latlng.lat,
+            lng = e.latlng.lng;
+    $("input[name = 'verboselat']").val(lat)
+    $("input[name = 'verboselng']").val(lng)
+    $("input[name = 'latlng']").val(lat.toFixed(4)+", "+lng.toFixed(4))
+    $("input[name = 'geocode']").removeAttr("value")
+    if(map.hasLayer(newComment)){
+        map.removeLayer(newComment)
+    }
+    newComment = L.marker([lat,lng]).bindPopup(lat.toFixed(4)+", "+lng.toFixed(4))
+    newComment.addTo(map)
+    getLatLonEventsOff()
+};
+singleGeocodeEventFunc = function(e){
+    var lat = e.layer._latlng.lat,
+            lng = e.layer._latlng.lng;
+    $("input[name = 'verboselat']").val(lat)
+    $("input[name = 'verboselng']").val(lng)
+    $("input[name = 'latlng']").val(lat.toFixed(4)+", "+lng.toFixed(4))
+    $("input[name = 'geocode']").val(e.layer.properties.geo_code_id)
+    if(map.hasLayer(newComment)){
+        map.removeLayer(newComment)
+    }
+    newComment = L.marker([lat,lng]).bindPopup(lat.toFixed(4)+", "+lng.toFixed(4))
+    newComment.addTo(map)
+    getLatLonEventsOff()
+};
+clusterEventFunc = function(e){
+    var clusterEvent = e;
+    clusterEvent.latlng = map.mouseEventToLatLng(e.originalEvent)
+    var lat = clusterEvent.latlng.lat,
+            lng = clusterEvent.latlng.lng;
+    $("input[name = 'verboselat']").val(lat)
+    $("input[name = 'verboselng']").val(lng)
+    $("input[name = 'latlng']").val(lat.toFixed(4)+", "+lng.toFixed(4))
+    $("input[name = 'geocode']").removeAttr("value")
+    if(map.hasLayer(newComment)){
+        map.removeLayer(newComment)
+    }
+    newComment = L.marker([lat,lng]).bindPopup(lat.toFixed(4)+", "+lng.toFixed(4))
+    newComment.addTo(map)
+    getLatLonEventsOff()
+};
 function getLatLon(){
-    map.once('click',function(e){
-        var lat = e.latlng.lat,
-                lng = e.latlng.lng;
-        $("input[name = 'verboselat']").val(lat)
-        $("input[name = 'verboselng']").val(lng)
-        $("input[name = 'latlng']").val(lat.toFixed(4)+", "+lng.toFixed(4))
-        $("input[name = 'geocode']").val(undefined)
-        if(map.hasLayer(newComment)){
-            map.removeLayer(newComment)
-        }
-        newComment = L.marker([lat,lng]).bindPopup(lat.toFixed(4)+", "+lng.toFixed(4))
-        newComment.addTo(map)
-    })
-    markers.once('click',function(e){
-        var lat = e.layer._latlng.lat,
-                lng = e.layer._latlng.lng;
-        $("input[name = 'verboselat']").val(lat)
-        $("input[name = 'verboselng']").val(lng)
-        $("input[name = 'latlng']").val(lat.toFixed(4)+", "+lng.toFixed(4))
-        $("input[name = 'geocode']").val(e.layer.properties.geo_code_id)
-        if(map.hasLayer(newComment)){
-            map.removeLayer(newComment)
-        }
-        newComment = L.marker([lat,lng]).bindPopup(lat.toFixed(4)+", "+lng.toFixed(4))
-        newComment.addTo(map)
-    })
-    markers.once('clusterclick',function(e){
-        var clusterEvent = e;
-        clusterEvent.latlng = map.mouseEventToLatLng(e.originalEvent)
-        var lat = clusterEvent.latlng.lat,
-                lng = clusterEvent.latlng.lng;
-        $("input[name = 'verboselat']").val(lat)
-        $("input[name = 'verboselng']").val(lng)
-        $("input[name = 'latlng']").val(lat.toFixed(4)+", "+lng.toFixed(4))
-        $("input[name = 'geocode']").val(undefined)
-        if(map.hasLayer(newComment)){
-            map.removeLayer(newComment)
-        }
-        newComment = L.marker([lat,lng]).bindPopup(lat.toFixed(4)+", "+lng.toFixed(4))
-        newComment.addTo(map)
-    })
-    suggestions.once('click',function(e){
-        var lat = e.latlng.lat,
-                lng = e.latlng.lng;
-        $("input[name = 'verboselat']").val(lat)
-        $("input[name = 'verboselng']").val(lng)
-        $("input[name = 'latlng']").val(lat.toFixed(4)+", "+lng.toFixed(4))
-        $("input[name = 'geocode']").val(undefined)
-        if(map.hasLayer(newComment)){
-            map.removeLayer(newComment)
-        }
-        newComment = L.marker([lat,lng]).bindPopup(lat.toFixed(4)+", "+lng.toFixed(4))
-        newComment.addTo(map)
-    })
-    suggestions.once('clusterclick',function(e){
-        var clusterEvent = e;
-        clusterEvent.latlng = map.mouseEventToLatLng(e.originalEvent)
-        var lat = clusterEvent.latlng.lat,
-                lng = clusterEvent.latlng.lng;
-        $("input[name = 'verboselat']").val(lat)
-        $("input[name = 'verboselng']").val(lng)
-        $("input[name = 'latlng']").val(lat.toFixed(4)+", "+lng.toFixed(4))
-        $("input[name = 'geocode']").val(undefined)
-        if(map.hasLayer(newComment)){
-            map.removeLayer(newComment)
-        }
-        newComment = L.marker([lat,lng]).bindPopup(lat.toFixed(4)+", "+lng.toFixed(4))
-        newComment.addTo(map)
-    })
-    comments.once('click',function(e){
-        var lat = e.latlng.lat,
-                lng = e.latlng.lng;
-        $("input[name = 'verboselat']").val(lat)
-        $("input[name = 'verboselng']").val(lng)
-        $("input[name = 'latlng']").val(lat.toFixed(4)+", "+lng.toFixed(4))
-        $("input[name = 'geocode']").val(undefined)
-        if(map.hasLayer(newComment)){
-            map.removeLayer(newComment)
-        }
-        newComment = L.marker([lat,lng]).bindPopup(lat.toFixed(4)+", "+lng.toFixed(4))
-        newComment.addTo(map)
-    })
-    comments.once('clusterclick',function(e){
-        var clusterEvent = e;
-        clusterEvent.latlng = map.mouseEventToLatLng(e.originalEvent)
-        var lat = clusterEvent.latlng.lat,
-                lng = clusterEvent.latlng.lng;
-        $("input[name = 'verboselat']").val(lat)
-        $("input[name = 'verboselng']").val(lng)
-        $("input[name = 'latlng']").val(lat.toFixed(4)+", "+lng.toFixed(4))
-        $("input[name = 'geocode']").val(undefined)
-        if(map.hasLayer(newComment)){
-            map.removeLayer(newComment)
-        }
-        newComment = L.marker([lat,lng]).bindPopup(lat.toFixed(4)+", "+lng.toFixed(4))
-        newComment.addTo(map)
-    })
-}
+    $('#map').addClass("crosshair")
+    $('.leaflet-clickable').css('cursor','crosshair')
+    map.on('click',singleEventFunc)
+    markers.on('click',singleGeocodeEventFunc)
+    markers.on('clusterclick',clusterEventFunc)
+    suggestions.on('click',singleEventFunc)
+    suggestions.on('clusterclick',clusterEventFunc)
+    comments.on('click',singleEventFunc)
+    comments.on('clusterclick',clusterEventFunc)
+};
 function slideResults(){
     var $lefty = $('#resultLeft'),
             $righty = $('#resultRight'),
@@ -786,6 +756,7 @@ function slideResults(){
     $('#resultcount').html(resulthtml)
 };
 function backToResults(){
+    getLatLonEventsOff();
     if(map.hasLayer(newComment)){map.removeLayer(newComment)}
     feature_collection.features = oldFeatures
     //Redraw map with clustering and zoom
