made requested changes to language and fixed links

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -8,13 +8,13 @@
               = image_tag "open_adt_small.png" 
           .span6
             %h3#tagline
-              Tracking Chinese Development Finance to Africa -
+              Tracking Chinese Development Finance -
               %span.beta-note
                 Beta
         .row-fluid.hidden-phone.header-upper                       
           .span9
             %h1#tagline
-              Tracking Chinese Development Finance to Africa - 
+              Tracking Chinese Development Finance -
               %span.beta-note
                 Beta      
           .span3
