--- a/app/views/media_items/_media_upload_form.html.erb
+++ b/app/views/media_items/_media_upload_form.html.erb
@@ -69,7 +69,7 @@
          <div class='row-fluid'>
             <input style='display:inline;' type='checkbox' required="true" id='terms_and_conditions'/>
             <label style='display:inline;'>
-              I accept the <%= link_to "terms and conditions", "http://www.aiddata.org/content/index/about/terms-conditions" %>.
+              I accept the <%= link_to "terms and conditions", "http://aiddata.org/disclaimer-and-license" %>.
             </label>
          </div>
          <% end %>
