--- a/app/views/projects/_suggest.haml
+++ b/app/views/projects/_suggest.haml
@@ -42,7 +42,7 @@
         .span6    
           %input#terms_and_conditions{type: "checkbox", required: true}
           I accept the 
-          = link_to "terms and conditions", "http://www.aiddata.org/content/index/about/terms-conditions" 
+          = link_to "terms and conditions", "http://aiddata.org/disclaimer-and-license"
         .span6
           #submit
             = f.submit class: "btn btn-primary", value: "Submit"
