--- a/app/views/projects/_project_flag_form.html.haml
+++ b/app/views/projects/_project_flag_form.html.haml
@@ -29,7 +29,7 @@
 					.span6		
 						%input#terms_and_conditions{type: "checkbox", required: true}
 						I accept the 
-						= link_to "terms and conditions", "http://www.aiddata.org/content/index/about/terms-conditions" 
+						= link_to "terms and conditions", "http://aiddata.org/disclaimer-and-license"
 					.span6
 						%input.btn.btn-primary{type: "submit", value: "Submit"}
 		.modal-footer
