--- a/app/views/static_pages/_geospatial_dashboard_js.html.erb
+++ b/app/views/static_pages/_geospatial_dashboard_js.html.erb
@@ -1118,7 +1118,8 @@ $("a.facet-controller#project_years_off").click(function(){
     filterGeoJson(filterObject);
 });
 $(document).ready(function(){
-    //If query, set zoom
+    //If query, set zoom and fill in search bar
+    $('#search').val(results.query)
     if(getParams().q!=undefined){
         if(feature_collection.features.length>0){
             if(Object.keys(markers._featureGroup._layers).length>0){
