--- a/app/views/static_pages/_geospatial_dashboard_js.html.erb
+++ b/app/views/static_pages/_geospatial_dashboard_js.html.erb
@@ -1048,6 +1048,7 @@ function submitComment(){
     $("form#post_comment input").val("")
     $("form#post_comment textarea").val("")
     $("form#post_comment input[type='checkbox']").prop("checked", false)
+    validate($("form#post_comment"))
     window.alert("Thank you for submitting a comment.\n\nIf you opted to geo-tag your comment, it will appear on your map during your current session, but will not be visible to other users until it is approved by an AidData staff member.")
 };
 map.on('zoomend',setRadiusByZoom)
