Fixed another filter bug

--- a/app/views/static_pages/_geospatial_dashboard_js.html.erb
+++ b/app/views/static_pages/_geospatial_dashboard_js.html.erb
@@ -805,6 +805,7 @@ function slideResults(){
 };
 function backToResults(){
     getLatLonEventsOff();
+    $('.facet-controller.on').trigger('click')
     if(map.hasLayer(newComment)){map.removeLayer(newComment)}
     feature_collection.features = oldFeatures
     //Redraw map with clustering and zoom
