Fixed yet another filter bug

--- a/app/views/static_pages/_geospatial_dashboard_js.html.erb
+++ b/app/views/static_pages/_geospatial_dashboard_js.html.erb
@@ -607,6 +607,7 @@ function drawProject(microProjectData, r){
 //Build Feature Collection
     var features = [],
             project = microProjectData[0].project;
+    $('.facet-controller.on').trigger('click')
     oldFeatures = feature_collection.features;
     microProjectData.forEach(function(geocode){
         var featureObj = {};
